--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "id": "1a9e597f",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
     {
      "data": {
       "text/plain": [
-       "<scipy.stats._distn_infrastructure.rv_frozen at 0x7f9a0abb6880>"
+       "<scipy.stats._distn_infrastructure.rv_frozen at 0x7f83919ef700>"
       ]
      },
      "execution_count": 2,
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "1b56c119",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "id": "f81be03d",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "id": "23d83122",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "array([2.74751363, 2.84267985])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "19b9d78f",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "0.9522096477271853"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c6a86c76",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "0.14211867659283192"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "id": "512bf9e6",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
        "0.13975823631416445"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "f4d251b5",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "04787525",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        "0.45284335760923855"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "id": "8479ad4f",
    "metadata": {},
    "outputs": [],
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "8468830b",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
        "0.8362274861228872"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "e5ea6058",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
        "0.02682143630162909"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "ba4b3c33",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
        "0.026821436301629083"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "1792e769",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
        "0.00011781621791055157"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "93a8d5c7",
    "metadata": {},
    "outputs": [
@@ -594,7 +594,7 @@
        "3.160000183986709e-06"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "58ddb57d",
    "metadata": {},
    "outputs": [],
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "id": "b1ce03f8",
    "metadata": {},
    "outputs": [
@@ -640,7 +640,7 @@
        "0.7475074624530771"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 25,
    "id": "545e3f8d",
    "metadata": {},
    "outputs": [],
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 26,
    "id": "cb592b49",
    "metadata": {},
    "outputs": [],
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 27,
    "id": "9a8603e2",
    "metadata": {},
    "outputs": [
@@ -773,7 +773,7 @@
        "max    499999.000000  158220.000000"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 28,
    "id": "372b49d3",
    "metadata": {},
    "outputs": [],
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
    "id": "a16f66be",
    "metadata": {},
    "outputs": [
@@ -817,7 +817,7 @@
        "0.24385742480214423"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 30,
    "id": "877ac95b",
    "metadata": {},
    "outputs": [
@@ -846,7 +846,7 @@
        "0.09208819199804053"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 31,
    "id": "f0e50f25",
    "metadata": {},
    "outputs": [
@@ -875,7 +875,7 @@
        "0.3350605685446666"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 32,
    "id": "0c271f3f",
    "metadata": {},
    "outputs": [
@@ -904,7 +904,7 @@
        "100484.64454102777"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
