Completed and reviewed the hypothesis testing exercises.

--- a/hypothesis_testing.ipynb
+++ b/hypothesis_testing.ipynb
@@ -117,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f85d08ed7f0>"
+       "<matplotlib.legend.Legend at 0x7f91a07b57f0>"
       ]
      },
      "execution_count": 2,
@@ -1642,7 +1642,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f859000bf40>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f91b1c27c70>"
       ]
      },
      "execution_count": 33,
@@ -1676,7 +1676,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f85b005c580>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f9192800370>"
       ]
      },
      "execution_count": 34,
@@ -1756,7 +1756,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f86004e8220>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f9192b9abe0>"
       ]
      },
      "execution_count": 37,
@@ -1967,7 +1967,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f85e3fa5f70>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f91b1b74790>"
       ]
      },
      "execution_count": 40,
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 41,
    "id": "0cc9b993",
    "metadata": {},
    "outputs": [],
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "c0b8802a",
    "metadata": {},
    "outputs": [],
@@ -2030,17 +2030,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "id": "041d4f0d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f85d12b3460>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f91804ec400>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2063,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 44,
    "id": "a323e110",
    "metadata": {},
    "outputs": [],
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "id": "2fe49316",
    "metadata": {},
    "outputs": [
@@ -2200,7 +2200,7 @@
        "[180 rows x 3 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2212,17 +2212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "id": "a45b2177",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f85d195b040>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f91b2544730>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2245,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "c90a8d2b",
    "metadata": {},
    "outputs": [],
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "id": "fc7fef57",
    "metadata": {},
    "outputs": [
@@ -2265,7 +2265,7 @@
        "(0.5352302262650253, 9.894096322214812e-15)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2276,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "id": "3676d087",
    "metadata": {},
    "outputs": [
@@ -2286,7 +2286,7 @@
        "True"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2312,14 +2312,13 @@
    "source": [
     "## 1. Use the following contingency table to help answer the question of whether using a macbook and being a codeup student are independent of each other.\n",
     "\n",
-    "                     Codeup Student\t              Not Codeup Student\n",
-    "Uses a Macbook\t          49\t                          20\n",
-    "Doesn't Use A Macbook\t   1\t                          30\n"
+    "Null Hypothesis: Using a MacBook and being a Codeup student are independent of one another.<br>\n",
+    "Hypothesis: There is a relationship between being a Codeup studend and using a MacBook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 76,
    "id": "a641fbe9",
    "metadata": {},
    "outputs": [
@@ -2369,7 +2368,7 @@
        "Doesn't Use a MacBook               1                  30"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2384,7 +2383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 77,
    "id": "3fe30836",
    "metadata": {},
    "outputs": [],
@@ -2394,17 +2393,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "id": "1efce442",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.4116760526193828e-09"
+       "0.22600212362969332"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2415,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "id": "b9ac6ce3",
    "metadata": {},
    "outputs": [
@@ -2425,7 +2424,7 @@
        "True"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2433,7 +2432,7 @@
    "source": [
     "p < α\n",
     "\n",
-    "#Because our p-value is less than our alpha, we reject the null. "
+    "#Because our p-value is less than our alpha, we reject the null and can safely make the claim that there is some sort of relationship. "
    ]
   },
   {
@@ -2446,7 +2445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 79,
    "id": "d455db45",
    "metadata": {},
    "outputs": [
@@ -2686,7 +2685,7 @@
        "[234 rows x 12 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2700,19 +2699,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 81,
    "id": "634829bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0968219674285856e-78"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "contingency_table = pd.crosstab(mpg.manufacturer, mpg.displ)\n",
     "\n",
-    "chi2, p, degf, expected = stats.chi2_contingency(contingency_table)"
+    "chi2, p, degf, expected = stats.chi2_contingency(contingency_table)\n",
+    "\n",
+    "p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "id": "745a83d1",
    "metadata": {},
    "outputs": [
@@ -2722,7 +2734,7 @@
        "True"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2751,7 +2763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "id": "a956790a",
    "metadata": {},
    "outputs": [],
@@ -2762,7 +2774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "id": "4af742a4",
    "metadata": {},
    "outputs": [],
@@ -2780,7 +2792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "id": "43f83d6f",
    "metadata": {},
    "outputs": [
@@ -2923,7 +2935,7 @@
        "[52543 rows x 5 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2934,7 +2946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "id": "93a5ca0b",
    "metadata": {},
    "outputs": [
@@ -2990,7 +3002,7 @@
        "M               8978  22702"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3002,17 +3014,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 82,
    "id": "915813d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5691938610810126"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "chi2, p, degf, expected = stats.chi2_contingency(gender_depts_contingency)"
+    "chi2, p, degf, expected = stats.chi2_contingency(gender_depts_contingency)\n",
+    "p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "id": "c266f26b",
    "metadata": {},
    "outputs": [
@@ -3022,7 +3046,7 @@
        "False"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3043,13 +3067,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 95,
    "id": "ed350cb0",
    "metadata": {},
    "outputs": [],
    "source": [
     "gender_titles = pd.DataFrame(pd.read_sql(\"\"\"\n",
-    "SELECT DISTINCT employees.emp_no, employees.gender, titles.title \n",
+    "SELECT employees.emp_no, employees.gender, titles.title \n",
     "FROM employees\n",
     "JOIN titles on employees.emp_no = titles.emp_no;\n",
     "\"\"\", url))"
@@ -3057,7 +3081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 96,
    "id": "71435cc6",
    "metadata": {},
    "outputs": [],
@@ -3067,7 +3091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 97,
    "id": "dfcfabd2",
    "metadata": {},
    "outputs": [],
@@ -3077,7 +3101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 98,
    "id": "947e6ef4",
    "metadata": {},
    "outputs": [
@@ -3152,35 +3176,35 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>443301</th>\n",
+       "      <th>443303</th>\n",
        "      <td>499997</td>\n",
        "      <td>M</td>\n",
        "      <td>Engineer</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>443302</th>\n",
+       "      <th>443304</th>\n",
        "      <td>499997</td>\n",
        "      <td>M</td>\n",
        "      <td>Senior Engineer</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>443303</th>\n",
+       "      <th>443305</th>\n",
        "      <td>499998</td>\n",
        "      <td>M</td>\n",
        "      <td>Senior Staff</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>443304</th>\n",
+       "      <th>443306</th>\n",
        "      <td>499998</td>\n",
        "      <td>M</td>\n",
        "      <td>Staff</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>443305</th>\n",
+       "      <th>443307</th>\n",
        "      <td>499999</td>\n",
        "      <td>M</td>\n",
        "      <td>Engineer</td>\n",
@@ -3188,7 +3212,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>443306 rows × 4 columns</p>\n",
+       "<p>443308 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3199,16 +3223,16 @@
        "3        10004      M         Engineer       False\n",
        "4        10004      M  Senior Engineer       False\n",
        "...        ...    ...              ...         ...\n",
-       "443301  499997      M         Engineer       False\n",
-       "443302  499997      M  Senior Engineer       False\n",
-       "443303  499998      M     Senior Staff       False\n",
-       "443304  499998      M            Staff       False\n",
-       "443305  499999      M         Engineer       False\n",
+       "443303  499997      M         Engineer       False\n",
+       "443304  499997      M  Senior Engineer       False\n",
+       "443305  499998      M     Senior Staff       False\n",
+       "443306  499998      M            Staff       False\n",
+       "443307  499999      M         Engineer       False\n",
        "\n",
-       "[443306 rows x 4 columns]"
+       "[443308 rows x 4 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3219,8 +3243,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 99,
    "id": "534e5429",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>is_manager</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>177211</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>266073</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "is_manager   False  True\n",
+       "gender                  \n",
+       "F           177211    13\n",
+       "M           266073    11"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gender_titles_contingency = pd.crosstab(gender_titles.gender, gender_titles.is_manager)\n",
+    "gender_titles_contingency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "adbd3e2d",
    "metadata": {},
    "outputs": [
     {
@@ -3275,7 +3367,7 @@
        "M           266072    11"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3287,7 +3379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 100,
    "id": "ab69940c",
    "metadata": {},
    "outputs": [
@@ -3300,15 +3392,15 @@
        "3                Engineer\n",
        "4         Senior Engineer\n",
        "               ...       \n",
-       "443301           Engineer\n",
-       "443302    Senior Engineer\n",
-       "443303       Senior Staff\n",
-       "443304              Staff\n",
-       "443305           Engineer\n",
-       "Name: title, Length: 443306, dtype: object"
+       "443303           Engineer\n",
+       "443304    Senior Engineer\n",
+       "443305       Senior Staff\n",
+       "443306              Staff\n",
+       "443307           Engineer\n",
+       "Name: title, Length: 443308, dtype: object"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3319,17 +3411,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 101,
    "id": "c329d8b2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.22600212362969332"
+       "0.22600394509880642"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3342,7 +3434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 102,
    "id": "e93462df",
    "metadata": {},
    "outputs": [
@@ -3352,7 +3444,7 @@
        "False"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3361,6 +3453,18 @@
     "p < α\n",
     "\n",
     "#Because our p value is not lower than our designated alpha, we fail to reject the null. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "7364dcd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Come back later and do the extra practice Ryan recommended (be sure to import itertools)\n",
+    "\n",
+    "# I also want to go through later to write a function in a tools file that I can import to use for the future. "
    ]
   }
  ],
