--- a/probability_distributions.ipynb
+++ b/probability_distributions.ipynb
@@ -43,7 +43,7 @@
     {
      "data": {
       "text/plain": [
-       "<scipy.stats._distn_infrastructure.rv_frozen at 0x7f83919ef700>"
+       "<scipy.stats._distn_infrastructure.rv_frozen at 0x7f905012d070>"
       ]
      },
      "execution_count": 2,
@@ -366,7 +366,7 @@
     }
    ],
    "source": [
-    "stats.poisson(4326 * .02).sf(96)"
+    "stats.binom(4326 * .02).sf(96)"
    ]
   },
   {
